# ChangeLog for net-fs/shfs
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/shfs/ChangeLog,v 1.14 2004/06/24 22:44:21 agriffis Exp $

  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> shfs-0.31-r1.ebuild,
  shfs-0.31.ebuild, shfs-0.32-r1.ebuild, shfs-0.32.ebuild, shfs-0.34.ebuild:
  Fix use invocation

*shfs-0.34 (28 May 2004)

  28 May 2004; Stuart Herbert <stuart@gentoo.org> shfs-0.34.ebuild:
  Version bump; for bug #45642

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> shfs-0.31-r1.ebuild,
  shfs-0.31.ebuild, shfs-0.32-r1.ebuild:
  Add inherit eutils

*shfs-0.32-r1 (16 Apr 2004)

  16 Apr 2004; <coxj@gentoo.org> shfs-0.32-r1.ebuild,
  files/shfs-gentoo-0.32-makefile-debug.diff:
  Patch to prevent extra debug info.

  05 Jan 2004; zhen <zhen@gentoo.org> metadata.xml:
  adding to net-fs herd

  30 Dec 2003; Luca Barbato <lu_zero@gentoo.org> shfs-0.32.ebuild:
  Minor fix (bug #35309)

  11 Nov 2003; Luca Barbato <lu_zero@gentoo.org> shfs-0.32.ebuild:
  Minor fix, thanks to Sven Wegener <sven.wegener@stealer.net>

*shfs-0.32 (11 Nov 2003)

  11 Nov 2003; Luca Barbato <lu_zero@gentoo.org> shfs-0.32.ebuild:
  New version, linux-2.6 support available.

  21 Oct 2003; <lu_zero@gentoo.org> shfs-0.31-r1.ebuild: Fixed the ppc patch 
  and made it use src_unpack. Works again on ppc.

  16 Oct 2003; <drobbins@gentoo.org> shfs-0.31-r1.ebuild: Now works on AMD64;
  much thanks to Ray Russell Reese III <russ@zerotech.net> for submitting this
  fix (see bug #31175)
  
  12 Jun 2003; <msterret@gentoo.org> shfs-0.31-r1.ebuild, shfs-0.31.ebuild: add
  Header

*shfs-0.31-r1 (06 Jun 2003)

  06 Jun 2003; Dylan Carlson <absinthe@gentoo.org> shfs-0.31-r1.ebuild:
  More secure permissions on the mount binaries, and some helpful notes after
  package install.

*shfs-0.31 (03 Jun 2003)

  03 Jun 2003; Dylan Carlson <absinthe@gentoo.org> shfs-0.31.ebuild,
  files/shfs-gentoo-0.31-makefile-root.diff, 