@@ -1,19 +1,21 @@
-MD5 d260d17c23662e71251cf89929fe2a04 shfs-0.32.ebuild 2951
-MD5 6fb46052947475dc72b282ad2f594602 shfs-0.34.ebuild 3074
-MD5 06cff9b9f98d439bc3605a70a2cd5945 shfs-0.32-r1.ebuild 3037
-MD5 d651ff3bd72489e0257c8b1f53c73056 shfs-0.31.ebuild 1757
-MD5 902386d93e1a25365a0e91a9bed80620 shfs-0.31-r1.ebuild 2657
 MD5 287aa66ce3e94f4fce6f0d6af8378d48 ChangeLog 2485
 MD5 9e3de9f34b9e3248eb5ff2e24ad1c819 metadata.xml 281
-MD5 6c1fade43f037362288f5f508ba5fe47 files/digest-shfs-0.31-r1 62
-MD5 50149869ad714fe5e5b4e9e0a94359ca files/digest-shfs-0.32-r1 60
-MD5 307c4e9fea61efad863724d214fcb916 files/shfs-amd64-makefile.patch 653
-MD5 a47ecfb8f1ab11f208660d0b45c1a3d7 files/shfs-gentoo-0.31-makefile-root.diff 612
-MD5 6313c7875b293c2a942bdad09f3937cc files/shfs-gentoo-0.32-makefile-debug.diff 657
+MD5 902386d93e1a25365a0e91a9bed80620 shfs-0.31-r1.ebuild 2657
+MD5 d651ff3bd72489e0257c8b1f53c73056 shfs-0.31.ebuild 1757
+MD5 06cff9b9f98d439bc3605a70a2cd5945 shfs-0.32-r1.ebuild 3037
+MD5 d260d17c23662e71251cf89929fe2a04 shfs-0.32.ebuild 2951
+MD5 6fb46052947475dc72b282ad2f594602 shfs-0.34.ebuild 3074
+MD5 6fb46052947475dc72b282ad2f594602 shfs-0.35.ebuild 3074
+MD5 8bdaeb75d54befa6b5d6f2bfe6657a60 files/digest-shfs-0.35 61
 MD5 d9c3f912bc5642882b84fa7f3edd8db8 files/amd.conf 842
 MD5 97e8d1e483ac538a072e0e82af787eeb files/amd.shfs 152
-MD5 bdf9a4a620ff5bcd7828251c144ec02b files/shfs.mount 1346
-MD5 dadc96e2e75365f207cbb3e90f565821 files/shfs-gentoo-0.31-ppc.diff 707
 MD5 6c1fade43f037362288f5f508ba5fe47 files/digest-shfs-0.31 62
+MD5 6c1fade43f037362288f5f508ba5fe47 files/digest-shfs-0.31-r1 62
 MD5 50149869ad714fe5e5b4e9e0a94359ca files/digest-shfs-0.32 60
+MD5 50149869ad714fe5e5b4e9e0a94359ca files/digest-shfs-0.32-r1 60
 MD5 cad92b9330844a369507b489cf37d18c files/digest-shfs-0.34 61
+MD5 307c4e9fea61efad863724d214fcb916 files/shfs-amd64-makefile.patch 653
+MD5 a47ecfb8f1ab11f208660d0b45c1a3d7 files/shfs-gentoo-0.31-makefile-root.diff 612
+MD5 dadc96e2e75365f207cbb3e90f565821 files/shfs-gentoo-0.31-ppc.diff 707
+MD5 6313c7875b293c2a942bdad09f3937cc files/shfs-gentoo-0.32-makefile-debug.diff 657
+MD5 bdf9a4a620ff5bcd7828251c144ec02b files/shfs.mount 1346
